# autoshift

./: Dockerfile  LICENSE  README.md  conftest.py  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  script.sh
.cursor/rules/: no-comments.mdc
autoshift/: asgi.py  permissions.py  settings.py  test_settings.py  urls.py  wsgi.py
cargo/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
cargo/migrations/: 0001_initial.py  0002_remove_cargoload_incoming_packages_and_more.py  0003_remove_cargoforecast_forecasted_packages_and_more.py
cargo/tests/: test_api.py  test_models.py
docs/: architecture_diagram.md  complete_architecture.md  dashboard_creation_guide.md  dashboard_demo.md  dashboard_instructions.md  dashboard_mockup.html  diagram_usage.md  presentation_architecture.md
nginx/: nginx.conf
scripts/: create_test_data.py  test_shifts.py
shift_optimizer/: Dockerfile  README.md  __init__.py  __main__.py  requirements.txt  setup.py  shift_optimizer_pb2.py  shift_optimizer_pb2_grpc.py  test_optimization.py
shift_optimizer/client/: client.py  django_integration.py
shift_optimizer/protos/: generate_grpc.py  shift_optimizer.proto
shift_optimizer/server/: models.py  optimizer.py  server.py
shift_optimizer/tests/: test_client.py  (+2 more)
shifts/: __init__.py  admin.py  apps.py  models.py  serializers.py  service.py  urls.py  views.py
user/: __init__.py  admin.py  models.py  serializers.py  service.py  urls.py  views.py
warehouses/: __init__.py  admin.py  apps.py  models.py  serializers.py  service.py  tests.py  urls.py  views.py
(+24 files in other folders)
